--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DisasHex/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DisasHex/CMakeLists.txt
@@ -4,5 +4,9 @@ project(DisasHex C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-disas-hex.c
+xed-examples-util.c
+)
 add_executable(DisasHex34)
 target_link_libraries(DisasHex xed)
