--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Ex5Enc/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Ex5Enc/CMakeLists.txt
@@ -4,5 +4,9 @@ project(Ex5Enc C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-ex5-enc.c
+xed-examples-util.c
+)
 add_executable(Ex5Enc34)
 target_link_libraries(Ex5Enc xed)
