--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Ex7/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Ex7/CMakeLists.txt
@@ -4,5 +4,9 @@ project(Ex7 C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-ex7.c
+xed-examples-util.c
+)
 add_executable(Ex734)
 target_link_libraries(Ex7 xed)
