--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Ex9Patch/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Ex9Patch/CMakeLists.txt
@@ -4,5 +4,9 @@ project(Ex9Patch C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-ex9-patch.c
+xed-examples-util.c
+)
 add_executable(Ex9Patch34)
 target_link_libraries(Ex9Patch xed)
