--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/ExIld2/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/ExIld2/CMakeLists.txt
@@ -4,5 +4,9 @@ project(ExIld2 C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-ex-ild2.c
+xed-examples-util.c
+)
 add_executable(ExIld234)
 target_link_libraries(ExIld2 xed)
