--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/ExamplesUtil/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/ExamplesUtil/CMakeLists.txt
@@ -4,5 +4,9 @@ project(ExamplesUtil C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-examples-util.c
+xed-examples-util.c
+)
 add_executable(ExamplesUtil34)
 target_link_libraries(ExamplesUtil xed)
