--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/FindSpecial/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/FindSpecial/CMakeLists.txt
@@ -4,5 +4,9 @@ project(FindSpecial C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-find-special.c
+xed-examples-util.c
+)
 add_executable(FindSpecial34)
 target_link_libraries(FindSpecial xed)
