--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/SymbolTable/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/SymbolTable/CMakeLists.txt
@@ -4,5 +4,9 @@ project(SymbolTable C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-symbol-table.c
+xed-examples-util.c
+)
 add_executable(SymbolTable34)
 target_link_libraries(SymbolTable xed)
