--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Tables/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Tables/CMakeLists.txt
@@ -4,5 +4,9 @@ project(Tables C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-tables.c
+xed-examples-util.c
+)
 add_executable(Tables34)
 target_link_libraries(Tables xed)
