--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Asmparse/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Asmparse/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.30)
 set(CMAKE_C_STANDARD 11)
-project(Asmparse C)
+project(AsmParse C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(Asmparse34)
-target_link_libraries(Asmparse xed)
+add_executable(
+xed-asmparse.c
+xed-examples-util.c
+)
+add_executable(AsmParse34)
+target_link_libraries(AsmParse xed)
