--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/AsmparseMain/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/AsmparseMain/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.30)
 set(CMAKE_C_STANDARD 11)
-project(AsmparseMain C)
+project(AsmParseMain C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(AsmparseMain34)
-target_link_libraries(AsmparseMain xed)
+add_executable(
+xed-asmparse-main.c
+xed-examples-util.c
+)
+add_executable(AsmParseMain34)
+target_link_libraries(AsmParseMain xed)
