--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DisasFilter/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DisasFilter/CMakeLists.txt
@@ -4,5 +4,9 @@ project(DisasFilter C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-disas-filter.c
+xed-examples-util.c
+)
 add_executable(DisasFilter34)
 target_link_libraries(DisasFilter xed)
