--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DisasMacho/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DisasMacho/CMakeLists.txt
@@ -4,5 +4,9 @@ project(DisasMacho C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-disas-macho.c
+xed-examples-util.c
+)
 add_executable(DisasMacho34)
 target_link_libraries(DisasMacho xed)
