--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Dot/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Dot/CMakeLists.txt
@@ -4,5 +4,9 @@ project(Dot C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-dot.c
+xed-examples-util.c
+)
 add_executable(Dot34)
 target_link_libraries(Dot xed)
