--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Enc21/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Enc21/CMakeLists.txt
@@ -4,5 +4,9 @@ project(Enc21 C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-enc2-1.c
+xed-examples-util.c
+)
 add_executable(Enc2134)
 target_link_libraries(Enc21 xed)
