--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Enc23/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Enc23/CMakeLists.txt
@@ -4,5 +4,9 @@ project(Enc23 C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-enc2-3.c
+xed-examples-util.c
+)
 add_executable(Enc2334)
 target_link_libraries(Enc23 xed)
