--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Ex3/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Ex3/CMakeLists.txt
@@ -4,5 +4,9 @@ project(Ex3 C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-ex3.c
+xed-examples-util.c
+)
 add_executable(Ex334)
 target_link_libraries(Ex3 xed)
