--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/ExAgen/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/ExAgen/CMakeLists.txt
@@ -4,5 +4,9 @@ project(ExAgen C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-ex-agen.c
+xed-examples-util.c
+)
 add_executable(ExAgen34)
 target_link_libraries(ExAgen xed)
