--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Size/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Size/CMakeLists.txt
@@ -4,5 +4,9 @@ project(Size C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-size.c
+xed-examples-util.c
+)
 add_executable(Size34)
 target_link_libraries(Size xed)
