--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Tester/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Tester/CMakeLists.txt
@@ -4,5 +4,9 @@ project(Tester C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
+add_executable(
+xed-tester.c
+xed-examples-util.c
+)
 add_executable(Tester34)
 target_link_libraries(Tester xed)
