--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Xed/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Xed/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.30)
 set(CMAKE_C_STANDARD 11)
-project( C)
+project(Xed C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(34)
-target_link_libraries( xed)
+add_executable(
+xed.c
+xed-examples-util.c
+)
+add_executable(Xed34)
+target_link_libraries(Xed xed)
