--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/avltree/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/avltree/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.30)
 set(CMAKE_C_STANDARD 11)
-project(avltree C)
+project(Avltree C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(avltree34)
-target_link_libraries(avltree xed)
+add_executable(
+avltree.c
+xed-examples-util.c
+)
+add_executable(Avltree34)
+target_link_libraries(Avltree xed)
