--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/CMakeLists.txt
@@ -1,5 +1,80 @@
 add_subdirectory(
 Avltree
+AsmParse
+Util
+AsmParseMain
+Util
+Avltree
+Util
+DecPrint
+Util
+DisasElf
+Util
+DisasFilter
+Util
+DisasHex
+Util
+DisasMacho
+Util
+DisasRaw
+Util
+DllDiscovery
+Util
+Dot
+Util
+DotPrep
+Util
+Enc21
+Util
+Enc22
+Util
+Enc23
+Util
+EncLang
+Util
+Ex1
+Util
+Ex3
+Util
+Ex4
+Util
+Ex5Enc
+Util
+Ex6
+Util
+Ex7
+Util
+Ex8
+Util
+Ex9Patch
+Util
+ExAgen
+Util
+ExCpuid
+Util
+ExIld
+Util
+ExIld2
+Util
+Util
+FindSpecial
+Util
+Min
+Util
+NmSymtab
+Util
+Reps
+Util
+Size
+Util
+SymbolTable
+Util
+Tables
+Util
+Tester
+Util
+Util
+Xed
 AsmParseMain
 AsmParse
 DecPrint
@@ -27,7 +102,7 @@ Ex6
 Ex7
 Ex8
 Ex9Patch
-ExamplesUtil
+Util
 FindSpecial
 Min
 NmSymtab
