--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/AsmParseMain/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/AsmParseMain/CMakeLists.txt
@@ -4,9 +4,8 @@ project(AsmParseMain C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(AsmParseMain
 xed-asmparse-main.c
 xed-examples-util.c
 )
-add_executable(AsmParseMain34)
 target_link_libraries(AsmParseMain xed)
