--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Avltree/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Avltree/CMakeLists.txt
@@ -4,9 +4,8 @@ project(Avltree C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(Avltree
 avltree.c
 xed-examples-util.c
 )
-add_executable(Avltree34)
 target_link_libraries(Avltree xed)
