--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DecPrint/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DecPrint/CMakeLists.txt
@@ -4,9 +4,8 @@ project(DecPrint C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(DecPrint
 xed-dec-print.c
 xed-examples-util.c
 )
-add_executable(DecPrint34)
 target_link_libraries(DecPrint xed)
