--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DotPrep/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DotPrep/CMakeLists.txt
@@ -4,9 +4,8 @@ project(DotPrep C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(DotPrep
 xed-dot-prep.c
 xed-examples-util.c
 )
-add_executable(DotPrep34)
 target_link_libraries(DotPrep xed)
