--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/ExIld/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/ExIld/CMakeLists.txt
@@ -4,9 +4,8 @@ project(ExIld C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(ExIld
 xed-ex-ild.c
 xed-examples-util.c
 )
-add_executable(ExIld34)
 target_link_libraries(ExIld xed)
