--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/NmSymtab/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/NmSymtab/CMakeLists.txt
@@ -4,9 +4,8 @@ project(NmSymtab C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(NmSymtab
 xed-nm-symtab.c
 xed-examples-util.c
 )
-add_executable(NmSymtab34)
 target_link_libraries(NmSymtab xed)
