--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Reps/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Reps/CMakeLists.txt
@@ -4,9 +4,8 @@ project(Reps C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(Reps
 xed-reps.c
 xed-examples-util.c
 )
-add_executable(Reps34)
 target_link_libraries(Reps xed)
