--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Xed/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Xed/CMakeLists.txt
@@ -4,9 +4,8 @@ project(Xed C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(Xed
 xed.c
 xed-examples-util.c
 )
-add_executable(Xed34)
 target_link_libraries(Xed xed)
