--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DisasElf/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DisasElf/CMakeLists.txt
@@ -4,9 +4,8 @@ project(DisasElf C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(DisasElf
 xed-disas-elf.c
 xed-examples-util.c
 )
-add_executable(DisasElf34)
 target_link_libraries(DisasElf xed)
