--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DisasRaw/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/DisasRaw/CMakeLists.txt
@@ -4,9 +4,8 @@ project(DisasRaw C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(DisasRaw
 xed-disas-raw.c
 xed-examples-util.c
 )
-add_executable(DisasRaw34)
 target_link_libraries(DisasRaw xed)
