--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/EncLang/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/EncLang/CMakeLists.txt
@@ -4,9 +4,8 @@ project(EncLang C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(EncLang
 xed-enc-lang.c
 xed-examples-util.c
 )
-add_executable(EncLang34)
 target_link_libraries(EncLang xed)
