--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Ex4/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/Ex4/CMakeLists.txt
@@ -4,9 +4,8 @@ project(Ex4 C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(Ex4
 xed-ex4.c
 xed-examples-util.c
 )
-add_executable(Ex434)
 target_link_libraries(Ex4 xed)
