--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/ExCpuid/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/ExCpuid/CMakeLists.txt
@@ -4,9 +4,8 @@ project(ExCpuid C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(ExCpuid
 xed-ex-cpuid.c
 xed-examples-util.c
 )
-add_executable(ExCpuid34)
 target_link_libraries(ExCpuid xed)
