--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/SymbolTable/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/SymbolTable/CMakeLists.txt
@@ -4,9 +4,8 @@ project(SymbolTable C)
 
 include_directories(../../include)
 link_directories(${CMAKE_SOURCE_DIR})
-add_executable(
+add_executable(SymbolTable
 xed-symbol-table.c
 xed-examples-util.c
 )
-add_executable(SymbolTable34)
 target_link_libraries(SymbolTable xed)
