--- a/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/AsmParse/CMakeLists.txt
+++ b/kits/xed-install-base-2024-11-27-win-x86-64/examples/examples/AsmParse/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 3.30)
 set(CMAKE_C_STANDARD 11)
 project(AsmParse C)
 
-include_directories(include)
+include_directories(
+.
+include
+)
 link_directories(${CMAKE_SOURCE_DIR})
 add_executable(AsmParse
 xed-asmparse.c
